[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16.0"
axum = { version = "0.8.9", features = ["ws"] }
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
iced = { version = "0.14.0", features = ["tokio"] }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = "0.9.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
tower-http = "0.7.0"
zip = "8.6.0"

[toolchain]
channel = "nightly"
components = ["rust-src"]
